- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5556] Rename tx_seminars_FrontEnd_WizardIcon to Tx_Seminars_FrontEnd_WizardIcon
- [#5555] Rename tx_seminars_FrontEnd_SelectorWidget to Tx_Seminars_FrontEnd_SelectorWidget
- [#5554] Rename tx_seminars_FrontEnd_RequirementsList to Tx_Seminars_FrontEnd_RequirementsList
- [#5553] Rename tx_seminars_FrontEnd_RegistrationsList to Tx_Seminars_FrontEnd_RegistrationsList
- [#5552] Rename tx_seminars_FrontEnd_RegistrationForm to Tx_Seminars_FrontEnd_RegistrationForm
- [#5551] Rename tx_seminars_FrontEnd_PublishEvent to Tx_Seminars_FrontEnd_PublishEvent
- [#5550] Rename tx_seminars_FrontEnd_EventHeadline to Tx_Seminars_FrontEnd_EventHeadline
- [#5549] Rename tx_seminars_FrontEnd_EventEditor to Tx_Seminars_FrontEnd_EventEditor
- [#5577] Rename tx_seminars_OldModel_Abstract to Tx_Seminars_OldModel_Abstract
- [#5576] Rename tx_seminars_Model_AbstractTimeSpan to Tx_Seminars_Model_AbstractTimeSpan
- [#5563] Rename tx_seminars_Mapper_BackEndUserGroup to Tx_Seminars_Mapper_BackEndUserGroup
- [#5547] Rename tx_seminars_FrontEnd_DefaultController to Tx_Seminars_FrontEnd_DefaultController
- [#5546] Rename tx_seminars_FrontEnd_Countdown to Tx_Seminars_FrontEnd_Countdown
- [#5545] Rename tx_seminars_FrontEnd_CategoryList to Tx_Seminars_FrontEnd_CategoryList
- [#5544] Rename tx_seminars_FrontEnd_AbstractView to Tx_Seminars_FrontEnd_AbstractView
- [#5543] Rename tx_seminars_cli_MailNotifier to Tx_Seminars_Cli_MailNotifier
- [#5538] Rename tx_seminars_BagBuilder_Speaker to Tx_Seminars_BagBuilder_Speaker
- [#5537] Rename tx_seminars_BagBuilder_Registration to Tx_Seminars_BagBuilder_Registration