@@ -248,7 +248,7 @@ class Tx_Seminars_BackEnd_GeneralEventMailFormTest extends Tx_Phpunit_TestCase {
 
 		/** @var tx_seminars_Model_Registration $registration */
 		$registration = tx_oelib_MapperRegistry::get('tx_seminars_Mapper_Registration')->find($registrationUid);
-		$hook = $this->getMock('tx_seminars_Interface_Hook_BackEndModule');
+		$hook = $this->getMock(Tx_Seminars_Interface_Hook_BackEndModule::class);
 		$hook->expects(self::once())->method('modifyGeneralEmail')
 			->with($registration, self::anything());
 
@@ -293,7 +293,7 @@ class Tx_Seminars_BackEnd_GeneralEventMailFormTest extends Tx_Phpunit_TestCase {
 			)
 		);
 
-		$hook = $this->getMock('tx_seminars_Interface_Hook_BackEndModule');
+		$hook = $this->getMock(Tx_Seminars_Interface_Hook_BackEndModule::class);
 		$hook->expects(self::exactly(2))->method('modifyGeneralEmail');
 
 		$hookClass = get_class($hook);
